# torchcka

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yaml
cka/: __init__.py  cka.py  core.py  utils.py
examples/: basic_comparison.py
pytorch_cka/: __init__.py  cka.py  core.py  utils.py
tests/: test_cka.py  test_config.py  test_core.py  test_huggingface_models.py  test_timm_models.py  test_torchvision_models.py  test_utils.py  test_viz.py
torchcka/: cka.py  core.py  viz.py
