[project]
name = "pytorch_cka"
version = "1.1.0"
description = "Centered Kernel Alignment for PyTorch models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Suhyeon (Sean) Yu", email = "suhyeon.yu.2789@gmail.com"}
]
keywords = ["pytorch", "cka", "centered kernel alignment", "neural networks", "machine learning", "representation", "similarity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/ryusudol/pytorch-cka"
Repository = "https://github.com/ryusudol/pytorch-cka"
Issues = "https://github.com/ryusudol/pytorch-cka/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "torchvision>=0.15.0",
    "timm>=1.0.0",
    "transformers>=4.30.0",
]
